# gxrio

./: .gitattributes  CMakeLists.txt  README.md  changelog
cmake/: gxrioConfig.cmake  gxrioConfig.cmake.in
example/: CMakeLists.txt  my-zcat.cpp
include/: gxrio.hpp
test/: hello-100.txt.xz  hello-1000.txt.xz  hello.txt.xz  unit-test-gzip.cpp  unit-test-xz.cpp  unit-test.cpp
